maze.lessons.maze.island.IslandMaze.scala.error
Escaper:15: error: Unit does not take parameters
			gauche()()
                                ^